# searchlight

./: .editorconfig  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: ci.yml  publish.yml
examples/: broadcast.rs  discovery.rs
src/: broadcast.rs  discovery.rs  errors.rs  lib.rs  net.rs  socket.rs  tests.rs  util.rs
src/broadcast/: builder.rs  errors.rs  handle.rs  service.rs
src/discovery/: builder.rs  errors.rs  event.rs  handle.rs  listen.rs  presence.rs
tests/: client_and_server.rs
