[package]
name = "searchlight"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["net", "rt", "sync", "time", "macros"] }
net2 = "0.2"
if-addrs = "0.7"
trust-dns-client = { version = "0.22", features = ["mdns"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["netioapi"] }