[package]
name = "searchlight"
version = "0.1.0"
edition = "2021"
description = "📡 Rust mDNS library designed with user interfaces in mind [WIP]"
authors = ["William Venner <william@venner.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/WilliamVenner/searchlight"
keywords = ["mdns", "dns", "discovery", "lan", "zeroconf"]
categories = ["network-programming", "asynchronous"]

[dependencies]
tokio = { version = "1", features = ["net", "rt", "sync", "time", "macros"] }
socket2 = "0.4"
if-addrs = "0.7"
trust-dns-client = { version = "0.22", features = ["mdns"] }
libc = "0.2"
thiserror = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["netioapi"] }

[dev-dependencies]
dns-parser = "0.8"